--- a/dmit2015-instructor-jaxrs-demo/src/main/webapp/todoitems/details.xhtml
+++ b/dmit2015-instructor-jaxrs-demo/src/main/webapp/todoitems/details.xhtml
@@ -13,14 +13,30 @@
         xmlns:b="http://bootsfaces.net/ui"
         template="/WEB-INF/jsf-templates/layout.xhtml">
 
-    <ui:param name="title" value="DMIT2015 Home"/>
+    <ui:param name="title" value="TodoItem Details"/>
 
     <ui:define name="maincontent">
+
         <b:jumbotron>
-            <h1>Home Page</h1>
+            <h1>TodoItem Details</h1>
         </b:jumbotron>
 
-        <p>Use the menu at the top of page to select a task to peform.</p>
+        <b:messages id="messages"/>
+
+        <b:form>
+
+            <ui:include src="detailsContent.xhtml"></ui:include>
+
+            <b:link id="editLink" outcome="edit" icon-awesome="edit">
+                <f:param name="editId" value="#{currentTodoItemEditController.editId}"/>
+                edit
+            </b:link>
+            |
+            <b:link id="backToListLink" outcome="index">
+                Back to List
+            </b:link>
+
+        </b:form>
 
     </ui:define>
 
