Updated batch-timer demo to use Oracle Spatial

--- a/dmit2015-batch-ejb-demo/src/main/webapp/WEB-INF/jsf-templates/layout.xhtml
+++ b/dmit2015-batch-ejb-demo/src/main/webapp/WEB-INF/jsf-templates/layout.xhtml
@@ -42,6 +42,11 @@
                 <b:navLink value="Manage Timers" href="#{request.contextPath}/manageTimers.xhtml"></b:navLink>
             </b:dropMenu>
 
+            <b:dropMenu value="Photo Enforcement">
+                <b:navLink value="List" href="#{request.contextPath}/EnforcementZoneCentre/index.xhtml"></b:navLink>
+                <b:navLink value="Find Many by Location" href="#{request.contextPath}/EnforcementZoneCentre/findManyByLocation.xhtml"></b:navLink>
+                <b:navLink value="Find One by Location" href="#{request.contextPath}/EnforcementZoneCentre/findOneByLocation.xhtml"></b:navLink>
+            </b:dropMenu>
 
         </b:navbarLinks>
 
